# blarg

./: .gitignore  Cargo.toml  README.md
blarg_builder/: Cargo.toml  README.md
blarg_builder/src/: api.rs  constant.rs  lib.rs  matcher.rs  prelude.rs
blarg_builder/src/api/: capture.rs  core.rs  field.rs  parameter.rs
blarg_builder/src/matcher/: core.rs  model.rs
blarg_builder/src/parser/: base.rs  interface.rs  middleware.rs  printer.rs
blarg_derive/: Cargo.toml  README.md
blarg_derive/src/: api.rs  core.rs  generate.rs  lib.rs  load.rs  model.rs  parameter.rs  parser.rs
blarg_derive/src/generate/: choices.rs  parameter.rs  parser.rs
blarg_derive/src/load/: attribute.rs  choices.rs  parameter.rs  parser.rs
examples/: demo_derived.rs  demo_dynamic_sub_command.rs  demo_organization.rs  demo_sub_command.rs  demo_summer.rs  demo_summer_b.rs  demo_summer_d.rs  derived.rs  derived_edgy.rs  derived_hintsoff.rs  derived_sub_command.rs  derived_sub_command1.rs  derived_sub_command2.rs  dynamic_sub_command.rs  empty.rs  example.rs  foo_bar.rs  reducer.rs
src/: api.rs  collection.rs  constant.rs  derive.rs  field.rs  lib.rs  model.rs  parser.rs  tokens.rs  ui.rs
src/api/: capture.rs  core.rs  field.rs  parameter.rs
src/matcher/: api.rs  core.rs  model.rs
src/parser/: base.rs  interface.rs  middleware.rs  printer.rs
src/tokens/: matcher.rs  model.rs
tests/: main.rs
