[package]
name = "blarg"
version = "0.2.1"
edition = "2021"
repository = "https://github.com/sawatzkylindsey/blarg"
keywords = ["argument", "cli", "arg", "parser", "parse"]
categories = ["command-line-interface"]
description = "A type-safe, domain sensitive, argument-option paradigm command line parser."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
unit_test = []

[dependencies]
thiserror = "^1.0"

[dev-dependencies]
assert_matches = "1.5"
empty = "0.0.4"
rand = "^0.8"
rstest = "^0.15"
