[workspace]
members = [
    "blarg_builder",
    "blarg_derive",
]

[workspace.package]
version = "0.2.3"
edition = "2021"
license = "MIT OR Apache-2.0"

[package]
name = "blarg"
repository = "https://github.com/sawatzkylindsey/blarg"
keywords = ["argument", "cli", "arg", "parser", "parse"]
categories = ["command-line-interface"]
description = "A type-safe, domain sensitive, argument-option paradigm command line parser."
license.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.docs.rs]
all-features = true

[features]
unit_test = ["blarg_builder/unit_test"]

[dependencies]
blarg_builder = { path = "./blarg_builder" }
blarg_derive = { path = "./blarg_derive" }
