[workspace]
members = [
    "blarg_builder",
    "blarg_derive",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sawatzkylindsey/blarg"

[package]
name = "blarg"
keywords = ["argument", "cli", "arg", "parser", "parse"]
categories = ["command-line-interface"]
description = "A type-safe, domain sensitive, argument/option paradigm command line parser."
license.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.docs.rs]
all-features = true

[features]
unit_test = ["blarg_builder/unit_test"]

[dependencies]
blarg_builder = { version = "1.0.0", path = "./blarg_builder" }
blarg_derive = { version = "1.0.0", path = "./blarg_derive" }
