[package]
name = "blarg_builder"
keywords = ["argument", "cli", "arg", "parser", "parse"]
categories = ["command-line-interface"]
description = "A type-safe, domain sensitive, argument/option paradigm command line parser."
license.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true

[features]
unit_test = []
debug = ["tracing"]

[dependencies]
thiserror = "^1.0"
terminal_size = "^0.3.0"
tracing = { version = "0.1.40", optional = true }

[dev-dependencies]
assert_matches = "1.5"
empty = "0.0.4"
rand = "^0.8"
rstest = "^0.15"
