[package]
name = "blarg_derive"
keywords = ["argument", "cli", "arg", "parser", "parse"]
categories = ["command-line-interface"]
description = "A type-safe, domain sensitive, argument/option paradigm command line parser."
license.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.62"
quote = "1.0.28"
syn = { version = "2.0.28", features = ["full"] }
